lib/queue-msg-macro/tests/non-derive.stderr
error: expected one of: `struct`, `enum`, `union`
 --> tests/non-derive.rs:4:1
  |
4 | fn function() {}
  | ^^
