lib/queue-msg-macro/tests/non-derive.rs
use queue_msg_macro::msg_struct;

#[msg_struct]
fn function() {}

fn main() {}
